fix: overflow-y (Sun, 15 May, 2022 13.47.20)

--- a/cssMemSlider/style.css
+++ b/cssMemSlider/style.css
@@ -5,6 +5,7 @@
 body {
     display: flex;
     justify-content: center;
+    overflow-y: hidden;
 }
 
 .wrapper {
